# nu_plugin_dbus

./: .gitignore  Cargo.toml  dbus-plugin.nix  flake.nix
